--- a/room_pm.css
+++ b/room_pm.css
@@ -13,6 +13,12 @@ You are NOT allowed using this file without creator's permission!
 
 .icon{background-image:url('http://i.imgur.com/h7AHd4j.png')}
 .room-background{background:url('http://i.imgur.com/cuQHzel.jpg') !important;}
+.icon-rcsmenu-main {background:url('http://i.imgur.com/PGG4Lc0.png') !important;}
+.icon-rcsmenu-notifications {background:url('http://i.imgur.com/2Rav7aS.png') !important;}
+.icon-rcsmenu-styling {background:url('http://i.imgur.com/klwHXdz.png') !important;}
+.icon-rcsmenu-customize {background:url('http://i.imgur.com/4JzU9Tu.png') !important;}
+.icon-rcsmenu-moderation {background:url('http://i.imgur.com/GbNRCgS.png') !important;}
+.icon-rcsmenu-settings {background:url('http://i.imgur.com/OijpP4e.png') !important;}
 
 /* Plug Menu */
 
@@ -115,6 +121,22 @@ You are NOT allowed using this file without creator's permission!
 #history-button.selected {
 	background:#2878BA !important;
 	box-shadow:0 0 0 #000, inset 0 0 20px #000 !important;
+}
+
+.media-list.history .row.selected {
+	background:rgba(40,120,186,0.6);
+}
+
+.media-list .selected {
+	background:rgba(40,120,186,0.4);
+}
+
+.media-list .selected .actions {
+	background:#4aaee7;
+}
+
+.pop-menu li:hover {
+	background:rgba(74,174,231,0.3) !important
 }
 
 #header-panel-bar {
@@ -693,7 +715,7 @@ color:#1CA949 !important;
 .experience .xp .bar .progress {
 	display: block;
 	height: 100%;
-	background:#1C3146;
+	background:linear-gradient(#2878ba, #1C3146);
 }
 
 
@@ -770,12 +792,18 @@ color:#1CA949 !important;
 
 .user-content .grid .cell:hover .top,
 #user-inventory .badges .grid .cell:hover {
-	background: rgb(28,49,70);
-	background: -moz-linear-gradient(top,  rgba(28,49,70,1) 0%, rgba(41,137,216,1) 71%, rgba(32,124,202,1) 72%, rgba(28,49,70,1) 100%)
-	background: -webkit-linear-gradient(top,  rgba(28,49,70,1) 0%,rgba(41,137,216,1) 71%,rgba(32,124,202,1) 72%,rgba(28,49,70,1) 100%);
-	background: linear-gradient(to bottom,  rgba(28,49,70,1) 0%,rgba(41,137,216,1) 71%,rgba(32,124,202,1) 72%,rgba(28,49,70,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c3146', endColorstr='#1c3146',GradientType=0 );
+	background: rgb(28,49,70) !important;
+	background: -moz-linear-gradient(top,  rgba(28,49,70,1) 0%, rgba(41,137,216,1) 71%, rgba(32,124,202,1) 72%, rgba(28,49,70,1) 100%) !important;
+	background: -webkit-linear-gradient(top,  rgba(28,49,70,1) 0%,rgba(41,137,216,1) 71%,rgba(32,124,202,1) 72%,rgba(28,49,70,1) 100%) !important;
+	background: linear-gradient(to bottom,  rgba(28,49,70,1) 0%,rgba(41,137,216,1) 71%,rgba(32,124,202,1) 72%,rgba(28,49,70,1) 100%) !important;
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c3146', endColorstr='#1c3146',GradientType=0 ) !important;
 	opacity:1;
+}
+
+#user-inventory .avatars .grid .cell.selected .top {
+	background: #282c35;
+	box-shadow: inset 0 0 0 2px #00b5e6;
+	cursor: default;
 }
 
 #user-inventory .avatars .grid .cell,
@@ -916,6 +944,14 @@ color:#1CA949 !important;
 	background:#2878ba;
 }
 
+.communities .grid .cell .bar {
+	background:#2878ba;
+}
+
+.communities .grid .cell .media {
+	background-image:url('http://i.imgur.com/vq75f3Z.png');
+}
+
 /* Settings */
 
 #user-settings .container .subscribe-button {
@@ -927,6 +963,296 @@ color:#1CA949 !important;
 	box-shadow:inset 0 0 0 1px #c59840, inset 0 0 40px #000;
 }
 
+.user-content.profile .points .subscribe-button {
+	box-shadow:inset 0 0 0 1px transparent, inset 0 0 40px #000;
+	transition:0.5s;
+}
+
+.user-content.profile .points .subscribe-button:hover {
+	box-shadow:inset 0 0 0 1px #c59840, inset 0 0 40px #000;
+}
+
+/* Room */
+
+#room-settings-menu {
+	background:#222;
+}
+
+#room-settings-menu .item.selected {
+	background:rgba(40,120,186,0.4);
+}
+
+#room-settings .general-settings .option button.off {
+	background:rgba(40,120,186,0.8);
+}
+
+#room-settings .general-settings.is-manager .option.enabled button.on {
+	background:rgba(192,64,67,0.8);
+}
+
+/* Playlist */
+
+#search-bar, #filter-bar {
+	background:rgba(44,181,232,0.2);
+	transition:0.3s;
+}
+
+#search-bar.focused, filter-bar.focused {
+	box-shadow:inset 0 0 10px #000 !important;
+	border:none;
+}
+
+#media-panel .header .button span,
+#playlist-menu .menu .row .count {
+	color:#4aaee7;
+}
+
+#playlist-activate-button {
+	background:rgba(40,120,186,0.6);
+}
+
+#playlist-menu .menu .row.selected {
+	background:rgba(40,120,186,0.6);
+}
+
+.media-list .row.now-playing {
+	background:rgba(40,120,186,0.8) !important;
+	border-bottom:1px solid #4aaee7 !important;
+}
+
+.media-list .row.selected {
+	background:rgba(40,120,186,0.4) !important;
+}
+
+.media-list .row.now-playing .actions {
+	background:#4aaee7 !important;
+}
+
+#your-next-media.in-history {
+	color:#C04043;
+}
+
+.media-list .row.in-history {
+	color:#fff;
+}
+
+.media-list .row.in-history.selected {
+	background:rgba(192,64,67,0.3) !important;
+}
+
+.media-list .in-history .actions:before {
+	color:#fff;
+	content:"HISTORY ";
+	position:absolute;
+	left:-95px;
+	top:0px;
+	display:block;
+	background:#C04043;
+	padding:19px;
+}
+
+.media-list .row.in-history {
+	background:rgba(192,64,67,0.2);
+}
+
+#playlist-edit-button,
+#playlist-shuffle-button,
+#playlist-delete-button,
+#playlist-import,
+#playlist-create {
+	background:#1C3146;
+}
+
+#playlist-edit-button:hover,
+#playlist-shuffle-button:hover,
+#playlist-import:hover,
+#playlist-create:hover {
+	background:#4aaee7 !important;
+}
+
+#playlist-delete-button:hover {
+	background:rgba(192,64,67,0.8) !important;
+}
+
+/* Dialogs */
+
+#dialog-confirm {
+    border-radius: 20px;
+    background: rgba(40,120,186,1);
+}
+
+.dialog-frame {
+    background: transparent;
+    border-radius: 20px;
+}
+
+.dialog-frame .button.cancel {
+    border-radius: 0 0 0 20px;
+}
+
+.dialog.destructive .button.submit {
+    border-radius: 0 0 20px 0px;
+    background: rgba(192,64,67,0.9);
+}
+
+#dialog-purchase {
+    border-radius: 20px;
+    background: rgba(40,120,186,1);
+}
+
+#dialog-purchase .dialog-frame {
+    background: transparent;
+    border-radius: 20px;
+}
+
+#dialog-purchase.avatar .left {
+    background:linear-gradient;	background: rgb(28,49,70);
+	background: -moz-linear-gradient(top,  rgba(28,49,70,1) 0%, rgba(41,137,216,1) 71%, rgba(32,124,202,1) 72%, rgba(28,49,70,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(28,49,70,1) 0%,rgba(41,137,216,1) 71%,rgba(32,124,202,1) 72%,rgba(28,49,70,1) 100%);
+	background: linear-gradient(to bottom,  rgba(28,49,70,1) 0%,rgba(41,137,216,1) 71%,rgba(32,124,202,1) 72%,rgba(28,49,70,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1c3146', endColorstr='#1c3146',GradientType=0 );
+	opacity:1;
+}
+
+#dialog-purchase .dialog-frame .button.cancel {
+    border-radius: 0 0 0 20px;
+}
+
+#dialog-purchase .dialog-frame .button.submit.subscribe {
+        border-radius: 0 0 20px 0;
+}
+
+#dialog-room-create {
+    border-radius: 20px;
+    background: rgba(40,120,186,1);
+}
+
+#dialog-room-create .dialog-frame {
+    background: transparent;
+    border-radius: 20px;
+}
+
+#dialog-room-create .button.submit {
+    border-radius: 0 0 20px 0;
+}
+
+#dialog-room-create .button.submit {
+    background: rgba(40,120,186,1);
+}
+
+#dialog-playlist-create {
+    border-radius: 20px;
+    background: rgba(40,120,186,1);
+}
+
+#dialog-playlist-create .dialog-frame {
+    background: transparent;
+    border-radius: 20px;
+}
+
+#dialog-playlist-create .dialog-frame .button.cancel {
+    border-radius: 0 0 0 20px;
+}
+
+#dialog-playlist-create .button.submit {
+    border-radius: 0 0 20px 0px;
+    background: rgba(40,120,186,0.8);
+}
+
+#rs-dialog-skipmodel {
+    border-radius: 20px !important;
+    background: rgba(40,120,186,1) !important;
+}
+
+#rs-dialog-skipmodel .dialog-frame .title {
+    top:14px !important;
+}
+
+#rs-dialog-skipmodel .dialog-frame {
+    background: transparent !important;
+    border-radius: 20px !important;
+}
+
+#rs-dialog-skipmodel .dialog-frame .button.cancel {
+    border-radius: 0 0 0 20px !important;
+}
+
+#rs-dialog-skipmodel .dialog-body {
+    height: 66px;
+    top:5px;
+}
+
+#rs-dialog-skipmodel .button.rsreset {
+    border-radius: 0 0 0 20px !important;
+}
+
+#rs-dialog-skipmodel .button.submit.destructive {
+    border-radius: 0 0 20px 0px !important;
+    background: rgba(192,64,67,0.9) !important;
+}
+
+#dialog-restricted-media {
+    border-radius: 20px !important;
+    background: rgba(40,120,186,1) !important;
+}
+
+#dialog-restricted-media .dialog-frame {
+    background: transparent !important;
+    border-radius: 20px !important;
+}
+
+#dialog-playlist-create.dialog.destructive .button.submit {
+    border-radius: 0 0 20px 20px;
+    background: rgba(192,64,67,0.9) !important;
+}
+
+#dialog-delete {
+    border-radius: 20px;
+    background: rgba(40,120,186,1);
+}
+
+#dialog-delete .dialog-frame {
+    background: transparent;
+    border-radius: 20px;
+}
+
+#dialog-delete .dialog-frame .button.cancel {
+    border-radius: 0 0 0 20px;
+}
+
+#dialog-delete.dialog.destructive .button.submit {
+    border-radius: 0 0 20px 0px;
+    background: rgba(192,64,67,0.9) !important;
+}
+
+#dialog-media-update {
+    border-radius: 20px;
+    background: rgba(40,120,186,1);
+}
+
+#dialog-media-update .dialog-frame {
+    background: transparent;
+    border-radius: 20px;
+}
+
+#dialog-media-update .dialog-frame .button.cancel {
+    border-radius: 0 0 0 20px;
+}
+
+#dialog-media-update .button.submit {
+    border-radius: 0 0 20px 0px;
+    background: rgba(40,120,186,0.8);
+}
+
+#dialog-media-update .dialog-input-background {
+	background:rgba(44,181,232,0.2);
+	transition:0.3s;
+}
+
+#dialog-media-update .dialog-input-background.focused {
+	box-shadow:inset 0 0 10px #000 !important;
+	border:none;
+}
 
 /* Custom CSS */
 
@@ -944,8 +1270,8 @@ color:#1CA949 !important;
 }
 
 #user-rollover.id-4006230 .meta .status:after {
-	content:"\A" url('http://i.imgur.com/VzJXKT1.png') " Designer";
-	color: #7cbf00;
+	content:"\A" url('http://i.imgur.com/qh3L2l9.png') " Designer";
+	color: #4aaee7;
 	margin-left: 4px;
 	white-space: pre;
 	font-size: 12px;
@@ -976,10 +1302,14 @@ color:#1CA949 !important;
 
 [data-cid^="4006230-"] .msg .from .un:before {
 	content: " [DESIGNER] ";
-	color:#7cbf00;
+	color:#4aaee7;
 }
 
 #user-lists .list .user.id-4006230 .name:before {
 	content: "[DESIGNER] ";
-	color:#7cbf00;
+	color:#4aaee7;
+}
+
+[data-cid^="4006230-"] .msg .text {
+	color:#4aaee7;
 }
