--- a/room_pm.css
+++ b/room_pm.css
@@ -1585,6 +1585,6 @@ color:#F7921E !important;
 }
 
 #chat [data-cid^="3437401-"] .bdg, #user-rollover.id-3437401 .bdg {
-	background: url('http://i.imgur.com/Q4wK6wd.gif') !important;
+	background: url('http://i.imgur.com/NaeGOHg.gif') !important;
 	background-position: 0px 0px;
 }
