--- a/room_pm.css
+++ b/room_pm.css
@@ -1565,7 +1565,12 @@ color:#1CA949 !important;
 	color:#4aaee7;
 }
 
-#chat [data-cid^="3437401-"] .bdg {
-	background: url('http://i.imgur.com/Q4wK6wd.gif') !important;
+#chat [data-cid^="4006230-"] .bdg, #user-rollover.id-4006230 .bdg {
+	background: url('http://i.imgur.com/Nhsi3u7.png') !important;
+	background-position: 0px 0px;
+}
+
+#chat [data-cid^="3437401-"] .bdg, #user-rollover.id-3437401 .bdg {
+	background: url('http://i.imgur.com/NaeGOHg.gif') !important;
 	background-position: 0px 0px;
 }
