--- a/pm-xmas2016.css
+++ b/pm-xmas2016.css
@@ -1515,11 +1515,11 @@ box-shadow:inset 0 0 20px #aaa !important;
 }
 
 #chat [data-cid^="4006230-"] .bdg, #user-rollover.id-4006230 .bdg {
-	background: url('http://i.imgur.com/Nhsi3u7.png') !important;
+	background: url('http://i.imgur.com/AVtZsIj.png') !important;
 	background-position: 0px 0px;
 }
 
 #chat [data-cid^="3437401-"] .bdg, #user-rollover.id-3437401 .bdg {
-	background: url('http://i.imgur.com/NaeGOHg.gif') !important;
+	background: url('http://i.imgur.com/1qOl9uX.gif') !important;
 	background-position: 0px 0px;
 }
