--- a/pm-xmas2016.css
+++ b/pm-xmas2016.css
@@ -29,7 +29,7 @@ You are NOT allowed using this file without creator's permission!
   100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
 }
 
-.room-background{background:url('http://i.imgur.com/Xt5VyJS.png') !important; top:20px !important;}
+.room-background{background:url('http://i.imgur.com/Xt5VyJS.png') !important;}
 
 #dj-canvas {
 top:-40px;
