Update and rename normal.css to classic.css

--- a/qplug/classic.css
+++ b/qplug/classic.css
@@ -1,3 +1,15 @@
+/*
+
+Author:   -PinguiN-
+Created:  26.02.2017
+For:      QPlug.cz (https://plug.dj/qplug-czsk)
+Theme:    Classic
+Note:     !!! DO NOT USE OR MODIFY THIS CSS WITHOUT CREATOR'S PERMISSION !!!
+
+Copyright © 2017 PinguiN
+
+*/
+
 /* ------------------------------- MAIN ------------------------------- */
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
